compiler/testData/diagnostics/tests/varargs/kt1838-val.kt
class A(vararg val t : Int) {
    {
        val <!UNUSED_VARIABLE!>t1<!> : IntArray = t
    }
}
